app/media-server/plex/plex-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: plex
    spec:
      securityContext:
        fsGroup: 0
        runAsUser: 0
      containers:
      - name: plex
        image: plexinc/pms-docker
        imagePullPolicy: Always
        # MountVolume.SetUp failed for volume "kube-api-access ca.crt no space left
        # resources:
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads # The mountpoint inside the container
          name: nfs-vol
      restartPolicy: Always
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: plex
      - name: nfs-vol
        nfs:
          server: 192.168.0.21 # IP to our NFS server
          path: /media/ # The path to our NFS share # The exported directory
status: {}
