app/media-server/plex/plex-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
  - port: 32400
    protocol: TCP
    targetPort: 32400
  selector:
    app: plex
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
