app/media-server/plex/plex-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: plex
  namespace: media-server
spec:
  ingressClassName: traefik
  rules:
  - host: plex.home.adaminformatika.hu
    http:
      paths:
      - backend:
          service:
            name: plex
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - plex.home.adaminformatika.hu
    secretName: plex.home.adaminformatika.hu
